--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/iconJc.ico">
+  <meta name="description" content="Major in Econ in UCR Fan of Basketball & Performance Car">
+  <meta name="author" content="862221906">
 
-  <title>John Doe - Business Administration</title>
+  <title>Johnson Chen - Econ</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Johnson Chen</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Johsonchen.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Johnson Chen
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Econ📚</div>
+        <p class="lead mb-4">When I went to the Jinzhai County Vocational Education School, I did not go with the group, but went spontaneously. It took the teacher and another student to help the children in poor areas and it took 4~5 days. After reaching the hour, I arrived in the mountains and noticed the people in that place in advance. So they met us with expectations and they had two weeks of experience. I learned about their customs and habits, and experienced the feeling of walking for one hour each day when they went to school. They taught them to play basketball, mathematics, and English.
+<br><br>
 
-        Enter bio here<br><br>
+        In summer of 2018, I participated in a youth leadership development program initiated by Industrial and Commercial Bank of China (ICBC) for heirs of big customers. At the beginning, I was excited to take study tours to industry tycoons such as Black Rock and Bloomberg where I learned how to use Bloomberg Terminal for financial information enquiry. Then, we were divided into groups to handle different financial cases for more practice. Ambitious enough, I assumed the role of team leader in our assigned project to design a portfolio. To ease the burden of other members, I proactively embarked upon the section of non-standardized credit assets management since it’s not as familiar as other financial vehicles. Under this condition, I researched a lot on trust loans, entrusted creditor’s rights, bankers’ acceptance bills, equity-based financing with buy-back clauses. Within the limited time, I organized and gave a final touch to all the slides, even helped other members with their presentation rehearsal. Our efforts paid off in the final report: we stood out among all the groups and our team received recognition from the portfolio analysts and other professionals. Further, in the summit, I prepared a topic focusing on how financial products outperform homogeneous ones and my presentation led me to an honor of Outstanding Participant. This experience was rewarding and immensely instructive, and this also brought me a valuable opportunity to work with talents from different social backgrounds and learn from them. More importantly, I value teamwork in solving problems and fulfilling tasks. Being a leader, more than must-have skills such as planning, organizing, leading and controlling managers should possess, I have learnt to capitalize on each person’s uniqueness as a tremendously powerful tool.
+<br><br>
 
-        Enter bio here
-        </p>
+        
+        To apply my knowledge of computer science in field practice, I searched for job opportunities at an Internet and E-commerce company. Working as a business analyst intern at BaoZun E-commerce in Shanghai, I encountered a challenge to drive business intelligence from disorderly data sets for a client company. Due to my previous experience, I used Excel for data analysis which however cannot meet the needs of this case because I have never handled multiple databases in a time including client’s E-commerce platform, social media matrix, and Customer Relation Management (CRM). To navigate the challenge, I need to solve two major problems. The first problem for me was how to synergize different databases. Hence, I learned Relational Database and MySQL to cleanse invalid data and organize useful items to be explicitly specified as accessible attributes. The other one was data modeling. For this problem, my line manager offered me great help in guiding me to use Python as a means of modeling for analysis. Eventually, I figured the two problems out and helped the senior analysts for the report. Motivated by this experience, I found computer science as a foundation for every walks of life to facilitate the analytical process and calculation. Specifically, it has been a great leverage for my study as well. In solving my mathematical problems, I would develop a program for more efficient calculation; while in research, I relied on a programming operation system for data modeling and quantitative analysis. At these points, my interest in taking an undergraduate program in this field grows to a large extent.</p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.wechat.com/en/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Jchen796">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.wechat.com/en/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="jchen796@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Teacherr</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.dnb.com/business-directory/company-profiles.jinzhai_county_shayan_vocational_junior_middle_school.0a2ab197223141ddd6c06569050f5d1e.html">Jinzhai County Vocational Education School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Teaching student all kinds of knowledges<br> 
+              • Play all kinds of games with them<br>
+              • Play all kinds of sports with them<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2016 - August 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Internship</h3>
+            <div class="subheading mb-3"><a target="_blank" href="http://www.icbc.com.cn/ICBC/en/default.htm">Industrial and Commercial Bank of China</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • A youth leadership development program<br>
+              • Researches on trust loans, entrusted creditor’s rights, bankers’ acceptance bills, equity-based financing with buy-back clauses<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">July 2018 - August 2018</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Mentor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.baozun.com/cn/index.html">Baozun</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Drive business intelligence from disorderly data sets for a client company<br>
+            • Excel for data analysis<br>
+            • Synergize different databases<br>
+            • Data modeling<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2018 - December 2020</span>
           </div>
         </div>
 
@@ -152,33 +154,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Economy</div>
+            <div>Bachelor degree of Economy</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - Presnt</span>
           </div>
         </div>
 
@@ -191,7 +171,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpg" width="500px">
+            <img src="img/image2.jpg" width="500px"><br>
+            <img src="img/image3.jpg" width="500px">
+            <img src="img/image4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +182,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Johnson Chen</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
